# semeio

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  .pylintrc  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  setup.py  test_requirements.txt  tox.ini
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: actionlint.yml  publish_to_pypi.yml  python-package.yml  style.yml  testing.yml  typing.yml
ci/: testkomodo.sh
ci/jenkins/: Jenkinsfile-komodo  testkomodo.sh
docs/: conf.py  contents.rst  correlated_observation_scaling.rst  workflow_jobs.rst
examples/rft_example/: obs.txt  prod_pressure.txt  rft.ert
examples/rft_example/resources/: SPE1.DATA.jinja2  layer_zone_table.txt  well_date_rft.txt
semeio/: __init__.py
semeio/_docs_utils/: _json_schema_2_rst.py
semeio/_exceptions/: exceptions.py
semeio/communication/: __init__.py  reporter.py  semeio_script.py
semeio/forward_models/config/: INSERT_NOSIM_CONFIG
semeio/forward_models/overburden_timeshift/: ots.py  ots_config.py
semeio/forward_models/rft/: trajectory.py  utility.py  zonemap.py
semeio/forward_models/scripts/: design2params.py  design_kw.py  fm_pyscal.py  fm_stea.py  gendata_rft.py  overburden_timeshift.py
semeio/hook_implementations/: forward_models.py  jobs.py
semeio/jobs/config_jobs/: DESIGN2PARAMS  DESIGN2PARAMS_CONFIG  DESIGN_KW  GENDATA_RFT  GENDATA_RFT_CONFIG  INSERT_NOSIM  NEXUS_SIM  OTS  PYSCAL  REMOVE_NOSIM_CONFIG  REPLACE_STRING_CONFIG  STEA
semeio/jobs/config_workflow_jobs/: CORRELATED_OBSERVATIONS_SCALING  CSV_EXPORT1  CSV_EXPORT2  MISFIT_PREPROCESSOR  SPEARMAN_CORRELATION
semeio/jobs/configs/: DESIGN2PARAMS  DESIGN_KW  STEA
semeio/jobs/correlated_observations_scaling/: exceptions.py  job.py  job_config.py  obs_utils.py  scaled_matrix.py  validator.py
semeio/jobs/csv_export1/: csv_export1.py  design_matrix.py  design_matrix_reader.py  ert_csv_ensemble.py  ert_ensemble.py  ert_member.py  export.py
semeio/jobs/csv_export2/: csv_export2.py
semeio/jobs/design2params/: design2params.py
semeio/jobs/design_kw/: design_kw.py
semeio/jobs/ensure_folder_structure/: __init__.py  job.py
semeio/jobs/misfit_preprocessor/: __init__.py  config.py  exceptions.py  job.py
semeio/jobs/nexus/: nexus.py
semeio/jobs/overburden_timeshift/: ots.py  ots_config.py  ots_res_surface.py  ots_vel_surface.py
semeio/jobs/rft/: gendata_rft.py  trajectory.py  utility.py  zonemap.py
semeio/jobs/scripts/: correlated_observations_scaling.py  csv_export1.py  csv_export2.py  design2params.py  design_kw.py  ensure_folder_structure.py  fm_pyscal.py  fm_stea.py  gendata_rft.py  misfit_preprocessor.py  nexus.py  overburden_timeshift.py  replace_string.py  spearman_correlation.py
semeio/jobs/spearman_correlation_job/: job.py
semeio/reporter/: __init__.py  reporter.py  serialize_json.py  serialize_numpy.py
semeio/workflows/ahm_analysis/: ahmanalysis.py
semeio/workflows/correlated_observations_scaling/: __init__.py  cos.py  exceptions.py  job.py  job_config.py  obs_utils.py  observation_scale_factor.py  scaled_matrix.py  update_scaling.py  validator.py
semeio/workflows/csv_export2/: csv_export2.py
semeio/workflows/localisation/: list_all_obs_and_model_param.py  local_config_scalar.py  local_config_script.py  local_script_lib.py  localisation_config.py  localisation_debug_settings.py  test_functions.py
semeio/workflows/misfit_preprocessor/: __init__.py  config.py  exceptions.py  hierarchical_config.py  job.py  kmeans_config.py  misfit_preprocessor.py  workflow_config.py
semeio/workflows/print_std/: print_std.py
semeio/workflows/spearman_correlation_job/: cluster_analysis.py  job.py  spearman_correlation.py
src/fmudesign/: __init__.py  _add_webviz_tornado_onebyone.py  _combinations.py  _designsummary.py  _excel2dict.py  _tornado_onebyone.py  create_design.py  design_distributions.py  fmudesignrunner.py
src/semeio/: __init__.py  semeio.py
src/semeio/_docs_utils/: _json_schema_2_rst.py
src/semeio/_exceptions/: exceptions.py
src/semeio/communication/: semeio_script.py
src/semeio/fmudesign/: __init__.py  _add_webviz_tornado_onebyone.py  _combinations.py  _designsummary.py  _excel2dict.py  _excel_to_dict.py  _tornado_onebyone.py  config_validation.py  create_design.py  design_distributions.py  fmudesignrunner.py  iman_conover.py  probabilit_idea.md  quality_report.py  utils.py
src/semeio/forward_models/: __init__.py  forward_models.py
src/semeio/hook_implementations/: forward_models.py
tests/: conftest.py  test_calc_tornado.py  test_console_scripts.py  test_create_design.py  test_design_distributions.py  test_designmatrix.py  test_ert_integration.py  test_excel2dict.py  test_formatting.py  test_reporter.py  test_use_cases.py
tests/communication/: test_integration.py
tests/communication/test-data/: TEST_WORKFLOW  TEST_WORKFLOW_JOB  config.ert  logging_test_workflow_job.py  test_workflow_job.py
tests/communication/unit/: test_file_reporter.py  test_semeio_script.py
tests/data/config/: design_input_background.xlsx  design_input_example_velocities.xlsx  design_input_singlereference_and_seed.xlsx
tests/data/distributions/: design.xlsx
tests/data/results/: geovolumes_collected.csv
tests/docs_utils/: test_json_schema_2_rst.py
tests/fmudesign/: test_calc_tornado.py  test_create_design.py  test_design_distributions.py  test_designmatrix.py  test_designsummary.py  test_ert_integration.py  test_excel2dict.py  test_excel_to_dict.py  test_iman_conover.py  test_use_cases.py
tests/fmudesign/data/: README.md
tests/forward_models/: conftest.py
tests/forward_models/ahm_analysis/: test_ahm_analysis.py
tests/forward_models/csv_export2/: conftest.py
tests/hook_implementations/: test_hook_implementations.py
tests/jobs/: conftest.py
tests/reporter/: test_reporter.py  test_serialize_json.py  test_serialize_numpy.py
tests/sensitivities/: test_create_design.py  test_design_distributions.py  test_designmatrix.py  test_excel2dict.py  test_use_cases.py
tests/workflows/: conftest.py
(+655 files in other folders)
