[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semeio"
authors = [
    { name = "Equinor ASA", email = "fg_sib-scout@equinor.com" },
]
description = "Forward models and workflows for Ert."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "GPL-3.0" }
classifiers = [
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version"]
dependencies = [
    "cvxpy",
    "ert>=14.3.0b0",
    "fmu-ensemble>1.6.5",
    "importlib_metadata",
    "importlib_resources",
    "numpy",
    "pandas>1.3.0",
    "pydantic>=2.9",
    "pyscal>=0.4.0",
    "resdata",
    "scikit-learn",
    "scipy",
    "segyio",
    "xlrd",
    "xtgeo>=2.15",
]

[project.urls]
repository = "https://github.com/equinor/semeio"

[project.entry-points."ert"]
AhmAnalysisJob = "semeio.workflows.ahm_analysis.ahmanalysis"
CsvExport2Job = "semeio.workflows.csv_export2.csv_export2"
semeio_forward_models = "semeio.hook_implementations.forward_models"

[project.entry-points."console_scripts"]
csv_export2 = "semeio.workflows.csv_export2.csv_export2:cli"
design2params = "semeio.forward_models.scripts.design2params:main_entry_point"
design_kw = "semeio.forward_models.scripts.design_kw:main_entry_point"
fm_pyscal = "semeio.forward_models.scripts.fm_pyscal:main_entry_point"
fmudesign = "semeio.fmudesign.fmudesignrunner:main"
gendata_rft = "semeio.forward_models.scripts.gendata_rft:main_entry_point"
overburden_timeshift = "semeio.forward_models.scripts.overburden_timeshift:main_entry_point"
replace_string = "semeio.forward_models.scripts.replace_string:main_entry_point"

[tool.setuptools_scm]
write_to = "src/semeio/version.py"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
test = [
    "hypothesis",
    "odfpy",
    "oil_reservoir_synthesizer",
    "openpyxl",
    "pytest",
    "pytest-console-scripts",
    "pytest-snapshot",
    "pytest-xdist",
    "rstcheck-core",
    "xlwt",
]

style = [
    "pre-commit",
]

types = [
    "mypy",
    "pandas-stubs",
    "types-PyYAML",
    "types-openpyxl",
    "types-setuptools",
]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
markers = [
    "equinor_test: Requires presences of test data in specified location",
    "ert_integration: Involves running the ert application explicitly",
    "integration_test: Not a unit test",
]

[tool.ruff]
src = ["src"]
line-length = 88
extend-exclude = ["tests/legacy_test_data"]

[tool.ruff.lint]
select = [
  "B",   # flake-8-bugbear
  "C4",  # flake8-comprehensions
  "F",   # pyflakes
  "I",   # isort
  "ICN", # flake8-import-conventions
  "NPY", # numpy specific rules
  "PGH", # pygrep-hooks
  "PIE", # flake8-pie
  "PL",  # pylint
  "RUF", # ruff specific rules
  "SIM", # flake-8-simplify
  "UP",  # pyupgrade
  "W",   # pycodestyle
]
ignore = [
  "PLR0911", # too-many-return-statements
  "PLR0912", # too-many-branches
  "PLR0915", # too-many-statements
  "PLR2004", # magic-value-comparison
  "PLW2901", # redefined-loop-name
]

[tool.ruff.lint.pylint]
max-args = 20
